--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "discord.js": "^11.5.0",
     "dotenv": "^8.0.0",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "rethinkdbdash": "^2.3.31",
     "socket.io-client": "^2.2.0"
